# ai-copy-paste

./: .gitignore  AGENTS.md  CHANGELOG.md  GEMINI.md  PHASE5.md  PHASE5_SUMMARY.md  PHASE7_SUMMARY.md  PLAN.md  README.md  RELEASE.md  TESTING.md  TEST_COVERAGE.md  commitlint.config.js  file-tree-test-scenarios.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.github/: RELEASE.md
.github/workflows/: build-test.yml  e2e-tests.yml  (+4 more)
.husky/: pre-commit
conductor/: product-guidelines.md  product.md  setup_state.json  tech-stack.md  tracks.md  workflow.md
e2e/: tsconfig.json  wdio.conf.ts
installers/: README.md
plans/: refactoring-plan.md
scripts/: bump-version.ts  check-version.ts  restore-e2e-config.js  run-driver.js  setup-e2e-config.js  version-sync.test.ts  version-sync.ts
sidecar/: .gitignore  README.md  automation.js  package.json  selectors.js
src/: App.css  App.tsx  AppLayout.test.tsx  AppTabs.test.tsx  BrowserAutomation.tsx  main.tsx  types.test.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  gitignore.rs  lib.rs  main.rs  templates.rs
src-tauri/src/cache/: mod.rs  text_cache.rs
src-tauri/src/commands/: browser.rs  extraction.rs  history.rs  indexing.rs  indexing_persistence.rs  indexing_traversal.rs  mod.rs  prompts.rs  search_service.rs  sensitive.rs  settings.rs  update.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/sensitive/: detection.rs  mod.rs  patterns.rs  redaction.rs
(+244 files in other folders)
