[package]
name = "ai-context-collector"
version = "0.0.3"
description = "Cross-Platform AI Context Collector"
authors = ["AI Context Collector Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ai_context_collector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
walkdir = "2"
rayon = "1"
chardetng = "0.1"
encoding_rs = "0.8"
ignore = "0.4"
regex = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }

